Fixed bad styling on message dialogs making text hard to read

--- a/src/glscopeclient/styles/glscopeclient.css
+++ b/src/glscopeclient/styles/glscopeclient.css
@@ -33,7 +33,6 @@ actionbar
 
 label,
 combobox *,
-messagedialog *,
 GtkGrid,
 GtkGrid:disabled,
 box,
@@ -43,6 +42,17 @@ box:disabled
 	background-color:	transparent;
 	background-image:	none;
 	text-shadow:		none;
+}
+
+/***********************************************************************************************************************
+	Message dialog
+ **********************************************************************************************************************/
+
+messagedialog *
+{
+	color:				@glscopeclient_text_color;
+	background-color:	@glscopeclient_bg_color;
+	background-image:	none;
 }
 
 /***********************************************************************************************************************
